<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Canada Tax Calculator</string>
    <string name="mainPage_title">Canada Tax Calculator</string>
    <string name="mainPage_purchasingGoodsButton">Purchasing Goods</string>
    <string name="mainPage_purchasingGoodsMultipleButton">Purchasing Multiple Goods</string>
    <string name="mainPage_purchasingFoodButton">Purchasing Food</string>
    <string name="title_activity_purchase_goods">PurchaseGoods</string>
    <string name="mainPage_select_province_title">Select Province</string>
    <string name="enter_price_title">Enter Price</string>
    <string name="amount_text">Amount</string>
    <string name="gst_text">Province:</string>
    <string name="qst_text">Canada:</string>
    <string name="hst_text">HST:</string>
    <string name="total_text">Total</string>
    <string name="price_after_tax">After Tax</string>
    <string name="original_price">Original</string>
    <string name="currency_price">GBP</string>
    <string name="remove_item">Remove</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="add_tip_button_text">Add Tip</string>
    <string name="add_to_bill_button_text">Add To Bill</string>
    <string-array name="provinces">
        <item>Ontario</item>
        <item>Quebec</item>
        <item>British Columbia</item>
        <item>Alberta</item>
        <item>Manitoba</item>
        <item>Saskatchewan</item>
        <item>Nova Scotia</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Prince Edward Island</item>
        <item>Northwest Territories</item>
        <item>Nunavut</item>
        <item>Yukon</item>
    </string-array>
</resources>


