<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PurchaseGoods"
    tools:showIn="@layout/activity_purchase_goods">

    <Button
        android:id="@+id/addToBillButton"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="CreateTaleRow"
        android:text="@string/add_to_bill_button_text"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/AddTipButton"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <Spinner
        android:id="@+id/provincesSpinner2"
        android:layout_width="303dp"
        android:layout_height="27dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="17dp"
        android:addStatesFromChildren="false"
        android:entries="@array/provinces"
        android:gravity="center"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CurrencyIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/CurrencyTableLayout"
        android:layout_width="95dp"
        android:layout_height="53dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/TaxCalculationTableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/provincesSpinner2"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/currencyText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="GBP"
                android:textColor="@android:color/background_dark"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="227dp" />

            <TextView
                android:id="@+id/currencyValue"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="306dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/CurrencyText2"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="EUR"
                android:textColor="@android:color/background_dark"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="227dp" />

            <TextView
                android:id="@+id/CurrencyValue2"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="395dp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="378dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_price_title"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="378dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:onClick="SetValues"
        android:text="@string/calculate_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceInput" />

    <Button
        android:id="@+id/AddTipButton"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/add_tip_button_text"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toStartOf="@+id/addToBillButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <View
        android:id="@+id/view2"
        style="@style/Divider"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaxCalculationTableLayout" />

    <TableLayout
        android:id="@+id/TaxCalculationTableLayout"
        android:layout_width="364dp"
        android:layout_height="38dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total">

        <TableRow
            android:layout_width="216dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gstText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/gst_text"
                android:textColor="@android:color/background_dark"
                app:autoSizeTextType="uniform"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="227dp" />

            <TextView
                android:id="@+id/gstValue"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                app:autoSizeTextType="uniform"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="306dp" />

            <TextView
                android:id="@+id/qstText"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:gravity="center"
                android:text="@string/qst_text"
                android:textColor="@android:color/background_dark"
                app:autoSizeTextType="uniform"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="227dp" />

            <TextView
                android:id="@+id/qstValue"
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                app:autoSizeTextType="uniform"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="395dp" />

            <TextView
                android:id="@+id/hstText"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:gravity="center"
                android:text="@string/hst_text"
                android:textColor="@android:color/background_dark"
                app:autoSizeTextType="uniform"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="227dp" />

            <TextView
                android:id="@+id/hstValue"
                android:layout_width="83dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                app:autoSizeTextType="uniform"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="395dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/total"
        android:layout_width="269dp"
        android:layout_height="90dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:text="$3000"
        android:textColor="@android:color/background_dark"
        android:textSize="80sp"
        app:autoSizeMaxTextSize="80dp"
        app:autoSizeMinTextSize="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="395dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton">

        <TableLayout
            android:id="@+id/ItemsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/ItemListHeaders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="131.66dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/item_price"
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

                <TextView
                    android:id="@+id/currencyPrice"
                    android:layout_width="131.66dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/currency_price"
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

                <TextView
                    android:id="@+id/delete"
                    android:layout_width="131.66dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/delete_item"
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

            </TableRow>
        </TableLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/CurrencyIcon"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toStartOf="@+id/provincesSpinner2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="395dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="Bill Total"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toTopOf="@+id/BillTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <TextView
        android:id="@+id/BillTotal"
        android:layout_width="394dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="180dp"
        android:gravity="center"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</android.support.constraint.ConstraintLayout>