<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillActivity">

    <TableLayout
        android:id="@+id/CurrencyTableLayout"
        android:layout_width="95dp"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BillTotal"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/currencyText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="GBP"
                android:textColor="@android:color/background_dark"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="227dp" />

            <TextView
                android:id="@+id/currencyValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/background_dark"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="306dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/BillTotal"
        android:layout_width="269dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="208dp"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="$3000"
        android:textColor="@android:color/background_dark"
        android:textSize="80sp"
        app:autoSizeMaxTextSize="80dp"
        app:autoSizeMinTextSize="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="19dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="395dp"
        android:layout_height="368dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableLayout
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/ItemListHeaders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/OriginalPrice"
                    android:layout_width="121.66dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/original_price"
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="121.66dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/price_after_tax"
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

                <TextView
                    android:id="@+id/currencyPrice"
                    android:layout_width="121.66dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/currency_price"
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

                <TextView
                    android:id="@+id/delete"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="."
                    android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

            </TableRow>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>